# craftgraph

./: Cargo.toml  flake.nix
site/: package-lock.json  package.json
site/src/: app.css
site/src/lib/: ItemSelector.svelte
site/src/routes/: +layout.svelte  +layout.ts  +page.svelte
site/src/routes/[item]/: +page.svelte  +page.ts
site/static/: data.json
src/: cli.rs  gamedata.rs  graph.rs  lib.rs  main.rs
